# ci-cd-taller-2

./: Dockerfile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
app/: app.py  calculadora.py
app/templates/: index.html
tests/: test_acceptance_app.py  test_app.py
