[project]
name = "ci-cd-taller-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "coverage>=7.13.5",
    "flake8>=7.3.0",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "selenium>=4.43.0",
    "webdriver-manager>=4.0.2",
]
